--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "lock": false,
   "tasks": {
-    "start": "deno run -A --unstable --watch=static/,routes/ dev.ts"
+    "start": "deno run -A --unstable --watch=static/,routes/ dev.ts",
+    "test": "DATABASE_URL=:memory: deno test --unstable --allow-env --allow-read"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
@@ -14,6 +15,7 @@
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.1.0",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "$std/": "https://deno.land/std@0.187.0/"
+    "$std/": "https://deno.land/std@0.192.0/",
+    "snowflake": "https://deno.land/x/deno_snowflake@v1.0.1/snowflake.ts"
   }
 }
